--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -18,7 +18,7 @@
           .sell-dropbox-container
             .sell-upload-items
             .sell-upload-drop-box
-              %input.sell-upload-drop-file{:multiple => "multiple", :name => "image1", :style => "display: none;", :type => "file"}/
+              %input.sell-upload-drop-file{multiple: "multiple", name: "image1", style: "display: none;", type: "file"}/
               %pre.visible-pc
                 ドラッグアンドドロップ
                 またはクリックしてファイルをアップロード
@@ -29,14 +29,14 @@
             %span.form-require
               必須
             %br
-            %input.input-default{:placeholder => "商品名（必須 40文字まで)", :value => ""}
+            %input.input-default{placeholder: "商品名（必須 40文字まで)", value: ""}
           .form-group
             %span.form-label
               商品の説明
             %span.form-require
               必須
             %br
-            %textarea.input-default2{:placeholder => "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライドグレーで傷はありません。あわせやすいのでおすすめです。", class: "input-default2", :value => "", :wrap => "hard", }
+            %textarea.input-default2{placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライドグレーで傷はありません。あわせやすいのでおすすめです。", class: "input-default2",value: "",wrap: "hard", }
         .sell-content
           %H3.sell-sub-head
             商品の詳細
@@ -46,37 +46,37 @@
               %span.form-require
                 必須
               %select.select-default
-                %option{:value => ""} ---
-                %option{:value => "1"} レディース
-                %option{:value => "2"} メンズ
-                %option{:value => "3"} ベビー・キッズ
-                %option{:value => "4"} インテリア・住まい・小物
-                %option{:value => "5"} 本・音楽・ゲーム
-                %option{:value => "6"} おもちゃ・ホビー・グッズ
-                %option{:value => "7"} コスメ・香水・美容
-                %option{:value => "8"} 家電・スマホ・カメラ
-                %option{:value => "9"} スポーツ・レジャー
-                %option{:value => "10"} ハンドメイド
-                %option{:value => "11"} チケット
-                %option{:value => "12"} 自動車・オートバイ
-                %option{:value => "13"} その他
+                %option{value: ""} ---
+                %option{value: "1"} レディース
+                %option{value: "2"} メンズ
+                %option{value: "3"} ベビー・キッズ
+                %option{value: "4"} インテリア・住まい・小物
+                %option{value: "5"} 本・音楽・ゲーム
+                %option{value: "6"} おもちゃ・ホビー・グッズ
+                %option{value: "7"} コスメ・香水・美容
+                %option{value: "8"} 家電・スマホ・カメラ
+                %option{value: "9"} スポーツ・レジャー
+                %option{value: "10"} ハンドメイド
+                %option{value: "11"} チケット
+                %option{value: "12"} 自動車・オートバイ
+                %option{value: "13"} その他
               .select-wrap
                 %select.select-default
-                  %option{:value => ""} ---
-                  %option{:value => "30"} トップス
-                  %option{:value => "31"} ジャケット/アウター
-                  %option{:value => "32"} パンツ
-                  %option{:value => "33"} 靴
-                  %option{:value => "34"} バッグ
-                  %option{:value => "35"} スーツ
-                  %option{:value => "36"} 帽子
-                  %option{:value => "37"} アクセサリー
-                  %option{:value => "38"} 小物
-                  %option{:value => "39"} 時計
-                  %option{:value => "40"} 水着
-                  %option{:value => "41"} レッグウェア
-                  %option{:value => "42"} アンダーウェア
-                  %option{:value => "43"} その他
+                  %option{value: ""} ---
+                  %option{value: "30"} トップス
+                  %option{value: "31"} ジャケット/アウター
+                  %option{value: "32"} パンツ
+                  %option{value: "33"} 靴
+                  %option{value: "34"} バッグ
+                  %option{value: "35"} スーツ
+                  %option{value: "36"} 帽子
+                  %option{value: "37"} アクセサリー
+                  %option{value: "38"} 小物
+                  %option{value: "39"} 時計
+                  %option{value: "40"} 水着
+                  %option{value: "41"} レッグウェア
+                  %option{value: "42"} アンダーウェア
+                  %option{value: "43"} その他
         .sell-content
           %H3.sell-sub-head
             配送について
@@ -86,25 +86,25 @@
               %span.form-require
                 必須
               %select.select-default2
-                %option{:value => ""} ---
-                %option{:value => "2"} 送料込み(出品者負担)
-                %option{:value => "1"} 着払い(購入者負担
+                %option{value: ""} ---
+                %option{value: "2"} 送料込み(出品者負担)
+                %option{value: "1"} 着払い(購入者負担
           .sell-form-box
             %span.group-first
               配送の方法
               %span.form-require
                 必須
               %select.select-default2
-                %option{:value => ""} ---
-                %option{:value => "5"} 未定
-                %option{:value => "14"} らくらくメルカリ便
-                %option{:value => "6"} ゆうメール
-                %option{:value => "8"} レターパック
-                %option{:value => "9"} 普通郵便(定形、定形外)
-                %option{:value => "10"} クロネコヤマト
-                %option{:value => "11"} ゆうパック
-                %option{:value => "13"} クリックポスト
-                %option{:value => "7"} ゆうパケット
+                %option{value: ""} ---
+                %option{value: "5"} 未定
+                %option{value: "14"} らくらくメルカリ便
+                %option{value: "6"} ゆうメール
+                %option{value: "8"} レターパック
+                %option{value: "9"} 普通郵便(定形、定形外)
+                %option{value: "10"} クロネコヤマト
+                %option{value: "11"} ゆうパック
+                %option{value: "13"} クリックポスト
+                %option{value: "7"} ゆうパケット
 
           .sell-form-box
             %span.group-first
@@ -112,55 +112,55 @@
               %span.form-require
                 必須
               %select.select-default2
-                %option{:value => ""} ---
-                %option{:value => "1"} 北海道
-                %option{:value => "2"} 青森県
-                %option{:value => "3"} 岩手県
-                %option{:value => "4"} 宮城県
-                %option{:value => "5"} 秋田県
-                %option{:value => "6"} 山形県
-                %option{:value => "7"} 福島県
-                %option{:value => "8"} 茨城県
-                %option{:value => "9"} 栃木県
-                %option{:value => "10"} 群馬県
-                %option{:value => "11"} 埼玉県
-                %option{:value => "12"} 千葉県
-                %option{:value => "13"} 東京都
-                %option{:value => "14"} 神奈川県
-                %option{:value => "15"} 新潟県
-                %option{:value => "16"} 富山県
-                %option{:value => "17"} 石川県
-                %option{:value => "18"} 福井県
-                %option{:value => "19"} 山梨県
-                %option{:value => "20"} 長野県
-                %option{:value => "21"} 岐阜県
-                %option{:value => "22"} 静岡県
-                %option{:value => "23"} 愛知県
-                %option{:value => "24"} 三重県
-                %option{:value => "25"} 滋賀県
-                %option{:value => "26"} 京都府
-                %option{:value => "27"} 大阪府
-                %option{:value => "28"} 兵庫県
-                %option{:value => "29"} 奈良県
-                %option{:value => "30"} 和歌山県
-                %option{:value => "31"} 鳥取県
-                %option{:value => "32"} 島根県
-                %option{:value => "33"} 岡山県
-                %option{:value => "34"} 広島県
-                %option{:value => "35"} 山口県
-                %option{:value => "36"} 徳島県
-                %option{:value => "37"} 香川県
-                %option{:value => "38"} 愛媛県
-                %option{:value => "39"} 高知県
-                %option{:value => "40"} 福岡県
-                %option{:value => "41"} 佐賀県
-                %option{:value => "42"} 長崎県
-                %option{:value => "43"} 熊本県
-                %option{:value => "44"} 大分県
-                %option{:value => "45"} 宮崎県
-                %option{:value => "46"} 鹿児島県
-                %option{:value => "47"} 沖縄県
-                %option{:value => "99"} 未定
+                %option{value: ""} ---
+                %option{value: "1"} 北海道
+                %option{value: "2"} 青森県
+                %option{value: "3"} 岩手県
+                %option{value: "4"} 宮城県
+                %option{value: "5"} 秋田県
+                %option{value: "6"} 山形県
+                %option{value: "7"} 福島県
+                %option{value: "8"} 茨城県
+                %option{value: "9"} 栃木県
+                %option{value: "10"} 群馬県
+                %option{value: "11"} 埼玉県
+                %option{value: "12"} 千葉県
+                %option{value: "13"} 東京都
+                %option{value: "14"} 神奈川県
+                %option{value: "15"} 新潟県
+                %option{value: "16"} 富山県
+                %option{value: "17"} 石川県
+                %option{value: "18"} 福井県
+                %option{value: "19"} 山梨県
+                %option{value: "20"} 長野県
+                %option{value: "21"} 岐阜県
+                %option{value: "22"} 静岡県
+                %option{value: "23"} 愛知県
+                %option{value: "24"} 三重県
+                %option{value: "25"} 滋賀県
+                %option{value: "26"} 京都府
+                %option{value: "27"} 大阪府
+                %option{value: "28"} 兵庫県
+                %option{value: "29"} 奈良県
+                %option{value: "30"} 和歌山県
+                %option{value: "31"} 鳥取県
+                %option{value: "32"} 島根県
+                %option{value: "33"} 岡山県
+                %option{value: "34"} 広島県
+                %option{value: "35"} 山口県
+                %option{value: "36"} 徳島県
+                %option{value: "37"} 香川県
+                %option{value: "38"} 愛媛県
+                %option{value: "39"} 高知県
+                %option{value: "40"} 福岡県
+                %option{value: "41"} 佐賀県
+                %option{value: "42"} 長崎県
+                %option{value: "43"} 熊本県
+                %option{value: "44"} 大分県
+                %option{value: "45"} 宮崎県
+                %option{value: "46"} 鹿児島県
+                %option{value: "47"} 沖縄県
+                %option{value: "99"} 未定
 
 
 
@@ -171,10 +171,10 @@
               %span.form-require
                 必須
               %select.select-default2
-                %option{:value => ""} ---
-                %option{:value => "1"} 1~2日で発送
-                %option{:value => "2"} 2~3日で発送
-                %option{:value => "3"} 4~7日で発送
+                %option{value: ""} ---
+                %option{value: "1"} 1~2日で発送
+                %option{value: "2"} 2~3日で発送
+                %option{value: "3"} 4~7日で発送
               .select-wrap
             .form-group
               .select-wrap
