--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -43,5 +43,7 @@
             = f.label :"パスワード(確認)"
             %span 必須
             = f.password_field :password_confirmation, placeholder: "6文字以上", autocomplete: "new-password", class: "input-default"
-            = f.submit :次へ進む, class: "button next-submit btn-default"
+          .form-group__input
+            .g-recaptcha{"data-sitekey": "6LeK9HkUAAAAAL8mLfKNdK_vo7oKQN0joY0w_74e", "data-callback": "validateRecaptcha"}
+            = f.submit :次へ進む, class: "button next-submit btn-default", disabled: "disabled"
 = render 'shared/login_footer'
